fix overflow

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -15,6 +15,7 @@ $white-color: #ffffff;
 
 body {
     background-color: $black-color !important;
+    overflow-x: hidden;
 }
 
 html {
